--- a/index.html
+++ b/index.html
@@ -175,23 +175,9 @@
         </div>
     </div>
 </div>
-</code></pre></section><a name="reversing"></a><section class="page-section"><h2>Reversing</h2><h3><code>.reverse</code></h3><div class="row"><div class="col-xs-12"><div class="box box-container"><div class="row reverse"><div class="col-xs-2"><div class="box-nested">1</div></div><div class="col-xs-2"><div class="box-nested">2</div></div><div class="col-xs-2"><div class="box-nested">3</div></div><div class="col-xs-2"><div class="box-nested">4</div></div><div class="col-xs-2"><div class="box-nested">5</div></div><div class="col-xs-2"><div class="box-nested">6</div></div></div></div></div></div><pre><code><div class="row reverse">
-    <div class="col-xs-2">
-        <div class="box">
-            1
-        </div>
-    </div>
-    <div class="col-xs-2">
-        <div class="box">
-            2
-        </div>
-    </div>
-    <div class="col-xs-2">
-        <div class="box">
-            3
-        </div>
-    </div>
-</div>
+</code></pre></section>
+
+<a name="reversing"></a><section class="page-section"><h2>Reversing</h2><h3><code>.reverse</code></h3><div class="row"><div class="col-xs-12"><div class="box box-container"><div class="row reverse"><div class="col-xs-2"><div class="box-nested">1</div></div><div class="col-xs-2"><div class="box-nested">2</div></div><div class="col-xs-2"><div class="box-nested">3</div></div><div class="col-xs-2"><div class="box-nested">4</div></div><div class="col-xs-2"><div class="box-nested">5</div></div><div class="col-xs-2"><div class="box-nested">6</div></div></div></div></div></div><pre><code>
 </code></pre></section><footer class="page-footer"><div class="row"><div class="col-xs start"><a class="tag" href="http://twitter.com/dam">@dam ♡s you</a></div><div class="col-xs end"><a class="link-top" href="#top">⇪ back to top</a></div></div></footer></div></div><script>(function() {
             document.addEventListener('DOMContentLoaded', function(e) {
               var code = document.createElement('script');
