--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
             });
             return ss;
           }
-          loadCSS( "//kristoferjoseph.com/font/bold.css" );</script><noscript><link href="//kristoferjoseph.com/font/bold.css" rel="stylesheet"></noscript></head><body class="layout"><div class="page js-page"><header class="hero"><div class="row center-xs"><h1 class="hero-headline">Flexbox Grid</h1></div><div class="row center-xs"><p class="hero-copy">A grid system based on the <a href="http://caniuse.com/#search=flexbox"><code class="inline-anchor">flex</code></a> display property.</p></div><div class="row center-xs"><a class="button invisible-xs visible-md" href="https://github.com/kristoferjoseph/flexboxgrid/archive/v6.3.1.zip">Download</a> <a class="button" href="https://github.com/kristoferjoseph/flexboxgrid">Github</a></div></header><div class="wrap container-fluid"><a name="responsive"></a><section class="page-section"><h2>Responsive</h2><p>Responsive modifiers enable specifying different column sizes, offsets, alignment and distribution at xs, sm, md &amp; lg viewport widths.</p><div class="row"><div class="col-xs-12 col-sm-3 col-md-2 col-lg-1"><div class="box-row"></div></div><div class="col-xs-6 col-sm-6 col-md-8 col-lg-10"><div class="box-row"></div></div><div class="col-xs-6 col-sm-3 col-md-2 col-lg-1"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-12 col-sm-3 col-md-2 col-lg-1"><div class="box-row"></div></div><div class="col-xs-12 col-sm-9 col-md-10 col-lg-11"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-10 col-sm-6 col-md-8 col-lg-10"><div class="box-row"></div></div><div class="col-xs-2 col-sm-6 col-md-4 col-lg-2"><div class="box-row"></div></div></div><pre><code><div class="row">
-    <div class="col-xs-12
-                col-sm-8
-                col-md-6
-                col-lg-4">
+          loadCSS( "//kristoferjoseph.com/font/bold.css" );</script><noscript><link href="//kristoferjoseph.com/font/bold.css" rel="stylesheet"></noscript></head>
+
+          <body class="layout"><div class="page js-page">
+
+            <div class="wrap container-fluid"><a name="responsive"></a><section class="page-section"><h2>Responsive</h2><p>Responsive modifiers enable specifying different column sizes, offsets, alignment and distribution at xs, sm, md &amp; lg viewport widths.</p><div class="row"><div class="col-xs-12 col-sm-3 col-md-2 col-lg-1"><div class="box-row"></div></div><div class="col-xs-6 col-sm-6 col-md-8 col-lg-10"><div class="box-row"></div></div><div class="col-xs-6 col-sm-3 col-md-2 col-lg-1"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-12 col-sm-3 col-md-2 col-lg-1"><div class="box-row"></div></div><div class="col-xs-12 col-sm-9 col-md-10 col-lg-11"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-10 col-sm-6 col-md-8 col-lg-10"><div class="box-row"></div></div><div class="col-xs-2 col-sm-6 col-md-4 col-lg-2"><div class="box-row"></div></div></div>
+
+            <pre><code><div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-lg-4">
         <div class="box">Responsive</div>
     </div>
 </div></code></pre></section><a name="fluid"></a><section class="page-section"><br><h2>Fluid</h2><p>Percent based widths allow fluid resizing of columns and rows.</p><div class="row"><div class="col-xs-12"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-1"><div class="box-row"></div></div><div class="col-xs-11"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-2"><div class="box-row"></div></div><div class="col-xs-10"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-3"><div class="box-row"></div></div><div class="col-xs-9"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-4"><div class="box-row"></div></div><div class="col-xs-8"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-5"><div class="box-row"></div></div><div class="col-xs-7"><div class="box-row"></div></div></div><div class="row"><div class="col-xs-6"><div class="box-row"></div></div><div class="col-xs-6"><div class="box-row"></div></div></div><pre><code>.col-xs-6 {
@@ -107,7 +110,9 @@
         </div>
     </div>
 </div>
-</code></pre></section><a name="distribution"></a><section class="page-section"><h2>Distribution</h2><p>Add classes to distribute the contents of a row or column.</p><h3><code>.around-</code></h3><div class="row"><div class="col-xs-12"><div class="box box-container"><div class="row around-xs"><div class="col-xs-2"><div class="box-nested"></div></div><div class="col-xs-2"><div class="box-nested"></div></div><div class="col-xs-2"><div class="box-nested"></div></div></div></div></div></div><pre><code><div class="row around-xs">
+</code></pre></section><a name="distribution"></a>
+
+<section class="page-section"><h2>Distribution</h2><p>Add classes to distribute the contents of a row or column.</p><h3><code>.around-</code></h3><div class="row"><div class="col-xs-12"><div class="box box-container"><div class="row around-xs"><div class="col-xs-2"><div class="box-nested"></div></div><div class="col-xs-2"><div class="box-nested"></div></div><div class="col-xs-2"><div class="box-nested"></div></div></div></div></div></div><pre><code><div class="row around-xs">
     <div class="col-xs-2">
         <div class="box">
             around
@@ -138,40 +143,6 @@
     <div class="col-xs-2">
         <div class="box">
             between
-        </div>
-    </div>
-</div>
-</code></pre></section><a name="reordering"></a><section class="page-section"><h2>Reordering</h2><p>Add classes to reorder columns.</p><h3><code>.first-</code></h3><div class="row"><div class="col-xs-12"><div class="box box-container"><div class="row"><div class="col-xs-2"><div class="box-first">1</div></div><div class="col-xs-2"><div class="box-first">2</div></div><div class="col-xs-2"><div class="box-first">3</div></div><div class="col-xs-2"><div class="box-first">4</div></div><div class="col-xs-2"><div class="box-first">5</div></div><div class="col-xs-2 first-xs"><div class="box-nested">6</div></div></div></div></div></div><pre><code><div class="row">
-    <div class="col-xs-2">
-        div class="box">
-            1
-        </div>
-    </div>
-    <div class="col-xs-2">
-        <div class="box">
-            2
-        </div>
-    </div>
-    <div class="col-xs-2 first-xs">
-        <div class="box">
-            3
-        </div>
-    </div>
-</div>
-</code></pre><h3><code>.last-</code></h3><div class="row"><div class="col-xs-12"><div class="box box-container"><div class="row"><div class="col-xs-2 last-xs"><div class="box-nested">1</div></div><div class="col-xs-2"><div class="box-first">2</div></div><div class="col-xs-2"><div class="box-first">3</div></div><div class="col-xs-2"><div class="box-first">4</div></div><div class="col-xs-2"><div class="box-first">5</div></div><div class="col-xs-2"><div class="box-first">6</div></div></div></div></div></div><pre><code><div class="row">
-    <div class="col-xs-2 last-xs">
-        <div class="box">
-            1
-        </div>
-    </div>
-    <div class="col-xs-2">
-        <div class="box">
-            2
-        </div>
-    </div>
-    <div class="col-xs-2">
-        <div class="box">
-            3
         </div>
     </div>
 </div>
